--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+                
+              },
+                "src/_redirects"
+
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
